fix collapse

--- a/src/components/Carrousel/Carrousel.css
+++ b/src/components/Carrousel/Carrousel.css
@@ -1,13 +1,12 @@
-.carousel-image-container {
+.carrousel-image-container {
   position: relative;
-  /* Ajoute cette ligne */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.carousel-image {
+.carrousel-image {
   border-radius: 25px;
   display: block;
   max-width: 100%;
@@ -21,22 +20,27 @@
   position: absolute;
   top: 0;
   bottom: 0;
+  width: 100%;
+  max-width: 1240px;
+  color: white;
   display: flex;
   align-items: center;
-  max-width: 100%;
-  width: 1240px;
-  color: white;
-  cursor: pointer;
+  justify-content: space-between;
 }
 
 .arrow-left {
   flex: 1;
   font-size: 40px;
   padding: 10px;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.fas {
+  cursor: pointer;
 }
 
 .arrow-right {
-  justify-content: flex-end;
   font-size: 40px;
   padding: 10px;
 }
